--- a/react-app/package.json
+++ b/react-app/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider CI=false && react-scripts build",
+    "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
