--- a/Pipfile
+++ b/Pipfile
@@ -26,7 +26,7 @@ python-editor = "==1.0.4"
 greenlet = ">=2.0.0"
 Mako = "==1.1.4"
 boto3 = "*"
-psycopg2-binary = "==2.8.6"
+psycopg2-binary = ">=2.9.3"
 
 [dev-packages]
 
