--- a/react-app/package.json
+++ b/react-app/package.json
@@ -2,6 +2,7 @@
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
   "dependencies": {
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
